Fix CSS issues in blog posts: add bullet points to lists, reduce code block padding, improve text spacing, and add code block bottom margin (#135)
* Initial plan

* Initial plan: Fix CSS issues in blog posts


* Fix CSS issues in blog posts: lists, code blocks, and text spacing


* Add bottom margin to code blocks and remove package-lock.json


---------

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -87,7 +87,7 @@ p {
   margin-bottom: 1em;
 }
 .prose p {
-  margin-bottom: 2em;
+  margin-bottom: 1.5em;
 }
 textarea {
   width: 100%;
@@ -110,8 +110,9 @@ code {
   border-radius: 2px;
 }
 pre {
-  padding: 1.5em;
+  padding: 1em;
   border-radius: 8px;
+  margin-bottom: 1.5em;
 }
 pre > code {
   all: unset;
@@ -125,6 +126,19 @@ blockquote {
 hr {
   border: none;
   border-top: 1px solid rgb(var(--gray-light));
+}
+ul {
+  list-style-type: disc;
+  padding-left: 1.5em;
+  margin-bottom: 1em;
+}
+ol {
+  list-style-type: decimal;
+  padding-left: 1.5em;
+  margin-bottom: 1em;
+}
+li {
+  margin-bottom: 0.5em;
 }
 @media (max-width: 720px) {
   body {
